# kubedal

./: Cargo.toml  Dockerfile  README.md  build.rs
src/: crdgen.rs  lib.rs  main.rs
src/csi/: csi.v1.rs  mod.rs
src/resource/: backup_controller.rs  controller.rs  crd.rs  data_node_controller.rs  data_pod_controller.rs  data_replica_set_controller.rs  datasource_controller.rs  mod.rs  sync_controller.rs
src/services/: controller.rs  identity.rs  mod.rs  node.rs
src/util/: mod.rs  mount_helper.rs  opendal.rs
yamls/: crd.yaml  crs.yaml  csi-driver.yaml  data_pod_example.yaml  data_replica_set.yaml  example.yaml  minio.yaml  sync-example.yaml
