[package]
name = "kubedal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.31"
env_logger = "0.11.6"
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["v1_29"] }
kube = "0.98.0"
kube-runtime = "0.98.0"
log = "0.4.26"
opendal = "0.52.0"
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["server"] }
uuid = "1.15.0"


[build-dependencies]
tonic-build = "0.12.3"
