[package]
name = "kubedal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.32"
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["v1_29", "schemars"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
opendal = { version = "0.52.0", features = ["services-s3", "services-http"] }
fuse3 = { version = "0.8.1", features = ["unprivileged", "tokio-runtime"] }
fuse3_opendal = "0.0.13"
prost = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["server"] }
uuid = "1.16.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
schemars = "0.8.22"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
sys-mount = "3.0.1"

[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "kubedal"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
